hphp/test/zend/bad/zend/bug52001.php
<?php
a(0,$$var);

$temp1=1;
$temp2=2;
var_dump($temp1);

function a($b,$c) {}
?>